2004-09-01  Not Zed  <NotZed@Ximian.com>

	* em-popup.h: added some docs.

	* em-popup.c (emp_standard_menu_factory): 
	* em-folder-tree.c (tree_drag_data_received): popup api changes.

2004-08-31  Not Zed  <NotZed@Ximian.com>

	* em-format-html-display.c (efhd_attachment_button_show): use a
	wrapper for the button event since the popup event has changed
	signature.

2004-08-30  Not Zed  <NotZed@Ximian.com>

	* em-popup.c (emp_standard_menu_factory): changed args.
	(struct _open_in_item): removed, use user data instead.
	(*): fix callbacks for new apis.
	(emp_popup_open): Removed some dead popup callbacks never invoked.
	(em_popup_target_new_attachments): new target type for attachment
	bar in composer.

	* em-folder-tree.c (emft_popup*): convert to new e-popup apis.

	* em-folder-view.c: emfv_popup_*: convert to new e-poup callback
	signatures.
	(EMFV_MAP_CALLBACK): fix for e-popup callback change.
	(EMFV_POPUP_AUTO_TYPE): same.
	(emfv_popup): dont bother setting item callback data.
	(emfv_popup_labels_free): api changes.
	(emfv_popup_items_free): new free method.
	(EMFVPopupItem): No longer needed.
	(emfv_uri_popup_free): api changes.
	(emfv_format_popup_event): new api's == simpler code.

	* em-account-editor.c (emae_receive_options_extra_item): add a
	hack for the label item, which is only used by connector to
	override the hostname and username labels.

2004-08-24  Not Zed  <NotZed@Ximian.com>

	* em-account-editor.c (em_account_editor_construct): create the
	window rather than the widget here.

	* mail-config.glade: remove the extra_page from the druid, it is
	autogenerated now.  renamed the "Receiving options" notebook page
	to "Receiving Email" since it isn't hte options page.

	* em-account-editor.c (emae_receive_options_page): no longer
	needed, autogenerated.
	(emae_receive_options_item): setup the auto-receive time values.
	(emae_receive_page): don't setup the auto check time values here.

	* mail-config.glade: Remove the Receiving Mail tab, it is now