@@ -52,6 +52,7 @@
 #include <gtk/gtkcombobox.h>
 #include <gtk/gtktable.h>
 
+#include <libgnome/gnome-i18n.h>
 #include <libgnomeui/gnome-druid.h>
 #include <libgnomeui/gnome-druid-page-standard.h>
 
