@@ -31,6 +31,7 @@
 #include <gtk/gtkhbox.h>
 
 #include <gal/util/e-util.h>
+#include <libgnome/gnome-i18n.h>
 
 #include "mail-component.h"
 #include "em-folder-tree.h"
