@@ -37,6 +37,7 @@
 
 #include <gtk/gtk.h>
 #include <gdk-pixbuf/gdk-pixbuf.h>
+#include <libgnome/gnome-i18n.h>
 
 #include <camel/camel-session.h>
 #include <camel/camel-store.h>
