@@ -41,6 +41,7 @@
 #include <gtk/gtkprogressbar.h>
 
 #include <bonobo/bonobo-control.h>
+#include <libgnome/gnome-i18n.h>
 
 #include <camel/camel-exception.h>
 
