@@ -76,6 +76,7 @@
 
 #include <gal/e-table/e-tree.h>
 #include <gal/e-table/e-tree-memory.h>
+#include <libgnome/gnome-i18n.h>
 
 #include <camel/camel-file-utils.h>
 #include <camel/camel-vtrash-folder.h>
