@@ -34,6 +34,7 @@
 #include <time.h>
 
 #include <libgnome/gnome-sound.h>
+#include <libgnome/gnome-i18n.h>
 #include <bonobo/bonobo-exception.h>
 #include <camel/camel-store.h>
 #include <camel/camel-folder.h>
