@@ -36,6 +36,7 @@
 #include <errno.h>
 #include <libgnome/gnome-exec.h>
 #include <gal/util/e-util.h>
+#include <libgnome/gnome-i18n.h>
 
 #include <camel/camel-mime-filter-from.h>
 #include <camel/camel-stream-filter.h>
