@@ -38,6 +38,7 @@
 #include <gtk/gtkimage.h>
 #include <gtk/gtkbox.h>
 #include <libgnomeui/gnome-window-icon.h>
+#include <libgnome/gnome-i18n.h>
 
 #include "e-util/e-gtk-utils.h"
 #include "e-util/e-account-list.h"
